after long time checking

--- a/excercises/basic_operation/dictionaries.ipynb
+++ b/excercises/basic_operation/dictionaries.ipynb
@@ -19,6 +19,19 @@
    "source": [
     "hello"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ee"
+   ]
   }
  ],
  "metadata": {
